[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/font/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/ui/intergrated_ui/pause_menu.gd" type="Script" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.184314, 0.156863, 0.156863, 0.588235 )

[node name="CustomMessage" type="Label" parent="."]
anchor_top = 0.032
anchor_right = 1.0
anchor_bottom = 0.04
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "_place_holder_custom_message"
align = 1
autowrap = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 570.0
margin_top = 287.0
margin_right = 709.0
margin_bottom = 433.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 139.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 1 )
text = "Tạm dừng"
align = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 139.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 5 )

[node name="ResumeBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 139.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 1 )
text = "Tiếp tục"

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 139.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 1 )
text = "Màn hình chính"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
